derive_tests/tests/compile_fail/unnamed_fields.rs
use validify::Validate;

#[derive(Validate)]
struct TupleStruct(String);

fn main() {}
