derive_tests/tests/compile_fail/unnamed_fields.stderr
error: #[derive(Validate/Validify)] can only be used on structs with named fields
 --> tests/compile_fail/unnamed_fields.rs:4:19
  |
4 | struct TupleStruct(String);
  |                   ^^^^^^^^
